2014-11-29  Matteo Corti  <matteo@corti.li>

	* check_diskio: fixed a security bug when creating the temporary file
                        (CVE-2014-8994)

2014-01-30  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: fixed a bug when calling the plugin in periods shorter than 1 second

2013-02-26  Matteo Corti  <matteo.corti@id.ethz.ch>
        * check_diskio: empty temporary files are re-written

2012-04-14  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: fixed a minor issue in the option parsing and output

2011-11-09  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: support for 3.x kernels

2010-10-22  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: fixed a problem in the parsing of the diskstat file
	* check_diskio: added a --testfile option to be able to test a dummy diskstat file

2010-07-06  Matteo Corti  <matteo.corti@id.ethz.ch>

        * check_diskio: version 3.2.2
	* check_diskio: fixed which ignored devices specified with -d /dev/

2010-06-30  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: exits with UNKNOWN if not able to read LVM stats

2010-05-25  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: partion numbers are stripped
	                only if the --strip-partition-number option is specified

2010-05-17  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio.pod: added info on --debug
	* Makefile.PL: removed the dependency on 'version'

2010-04-16  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: --debug option
        * check_diskio: supports both formats for partitions in /proc/diskstats (11 and 4 fields)

2010-02-18  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_diskio: unit handling rewrite (Nikolaus Filus)

This new version introduces a rewrite of the unit handling with the
following changes:
- option uom is reduced to bits, bytes and sectors
- new option factor specifies the multiplier for thresholds (binary and
decimal)