@@ -137,11 +137,11 @@ check_diskio depends on
 
 =item * List::MoreUtils
 
-=item * Nagios::Plugin
+=item * Monitoring::Plugin
 
-=item * Nagios::Plugin::Getopt
+=item * Monitoring::Plugin::Getopt
 
-=item * Nagios::Plugin::Threshold
+=item * Monitoring::Plugin::Threshold
 
 =item * Number::Format
 
